MON-8: Fixed scrollbar jumping

--- a/components/navbar/AppNavbar/AppNavbar.module.css
+++ b/components/navbar/AppNavbar/AppNavbar.module.css
@@ -1,6 +1,10 @@
 .navbar {
+    position: fixed;
+    top: 0;
+    width: 100vw;
     background-color: var(--main-dark-color-dark1);
     height: 3rem;
+    padding-right: 1rem;
 
     display: grid;
     grid-template-rows: 3rem;
